出问题后，才知道阅读源码吗？